remove env file from git

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ dist
 dist-ssr
 *.local
 
+# env
+.env
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -23,5 +26,4 @@ dist-ssr
 *.sln
 *.sw?
 
-# .env
-.env
+
