--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
-    "@reduxjs/toolkit": "^2.2.1",
+    "@reduxjs/toolkit": "^2.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
+    "redux-persist": "^6.0.0",
     "text-security": "^3.2.1"
   },
   "devDependencies": {
