--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
     "redux-persist": "^6.0.0",
+    "redux-persist-transform-encrypt": "^5.1.1",
+    "redux-thunk": "^3.1.0",
     "text-security": "^3.2.1"
   },
   "devDependencies": {
